# bioGUI

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  about.md  bioGUI.desktop  bioGUI.qrc  bioGUI.sh  build-in-place.sh  check_install_modules.sh  config.ini  example.gui  install_templates_to_db.py  silent_qt_install.qs
algorun_mods/: bowtie.rb  bowtie_ext_files.txt  bowtie_test_in.fq
cmake/: QtCommon.cmake
deploy/: README.md
doc/: Makefile  biogui_idea.rst  build_wsl.rst  conf.py  developer_guide.rst  download_template.rst  index.rst  install_template_example.rst  install_template_trimmomatic.rst  introduction.rst  licence.rst  make.bat  nodes.rst  user_guide.rst
docs/: README.md  README2.md
extlib/openssl/: NEWS.txt  README.txt  authors.txt
extlib/openssl/include/openssl/: opensslconf.h
extlib/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
install_templates/: biogui_template.q13256.igui  install_albacore.igui  install_apple_first.igui  install_ballgown.igui  install_bowtie1.igui  install_bowtie2.igui  install_bwa.igui  install_canu.igui  install_featurecounts.igui  install_glimmer.igui  install_graphmap.igui  install_guppy.igui  install_hisat.igui  install_hmmer.igui  install_jellyfish.igui  install_mm_asm_racon.igui  install_msempire.igui  install_phanotate.igui  install_pureseqtm.igui  install_rmats.igui  install_rnahybrid.igui  install_rsem.igui  install_samtools.igui  install_spades.igui  install_stringtie.igui  install_top_monitor.igui  install_trimmomatic.igui  install_wsl_first.igui  install_wsl_mounter.igui  install_wtdbg2.igui
java_server/: pom.xml
java_server/src/main/java/bioGUI/: Category.java  CategoryManager.java  GlobalSettings.java  OmicToolsConstraint.java  Template.java  TemplateManager.java  TemplateRequest.java  TemplateRequestManager.java  User.java  UserManager.java  ViewTemplates.java
java_server/src/main/webapp/: add_template.zul  get_template.zul  index.zul  list_categories.zul  list_templates.zul  request_template.zul  show_template.zul
java_server/src/main/webapp/WEB-INF/: urlrewrite.xml  web.servlet-3.xml  web.xml  zk.xml
lua_scripts/: test.lua
res/: biogui.icns  icon.rc
src/: Logging.cpp  Logging.h  Maths.h  Validable.h  bioGUI.cpp  bioGUI.h  bioGUIapp.cpp  bioGUIapp.h  main.cpp
src/app/: AdvancedStreamBox.cpp  AdvancedStreamBox.h  ExecuteThread.cpp  ExecuteThread.h  ExecutionRunThread.cpp  ExecutionRunThread.h  ExtendedBuffer.cpp  ExtendedBuffer.h  ExtendedProcFileBuffer.h  ExtendedProcessBuffer.cpp  ExtendedProcessBuffer.h  ExtendedStdBuffer.cpp  ExtendedStdBuffer.h  ExtendedThreadBuffer.cpp  ExtendedThreadBuffer.h  ExtendedThreadFileBuffer.h  ProcessLauncher.cpp  ProcessLauncher.h  QAbstractButtonItem.cpp  QAbstractButtonItem.h  QClickableLabel.cpp  QClickableLabel.h  QComboItem.cpp  QComboItem.h  QDownloadTemplatesWindow.cpp  QDownloadTemplatesWindow.h  QExclusiveGroupBox.cpp  QExclusiveGroupBox.h  QExtGridLayout.cpp  QExtGridLayout.h  QExtendedCheckBox.h  QExtendedRadioButton.h  QNetworkReplyTimer.h  QOrderedLayout.cpp  QOrderedLayout.h  QSortableFileList.cpp  QSortableFileList.h  QStringTableWidgetItem.cpp  QStringTableWidgetItem.h  QVerticalScrollArea.h  (+8 more)
src/duktape/: duk_config.h
src/parsing/: XMLParser.cpp  XMLParser.h  XMLParserExecution.cpp  XMLParserExecution.h  XMLParserInfo.cpp  XMLParserInfo.h  XMLParserWindow.cpp  XMLParserWindow.h
src/parsing/nodes/: ExecutionAddNode.cpp  ExecutionAddNode.h  ExecutionConstNode.cpp  ExecutionConstNode.h  ExecutionDeferredNode.cpp  ExecutionDeferredNode.h  ExecutionEnvNode.cpp  ExecutionEnvNode.h  ExecutionExecutableNode.h  ExecutionExecuteNode.cpp  ExecutionExecuteNode.h  ExecutionFileNode.cpp  ExecutionFileNode.h  ExecutionHTTPExecuteNode.cpp  ExecutionHTTPExecuteNode.h  ExecutionIfNode.cpp  ExecutionIfNode.h  ExecutionMathNode.h  ExecutionMessageBoxNode.cpp  ExecutionMessageBoxNode.h  ExecutionNetwork.cpp  ExecutionNetwork.h  ExecutionNode.cpp  ExecutionNode.h  ExecutionOrderedAddNode.cpp  ExecutionOrderedAddNode.h  ExecutionOutputNode.cpp  ExecutionOutputNode.h  ExecutionParseFileNode.cpp  ExecutionParseFileNode.h  ExecutionPathRelocateNode.cpp  ExecutionPathRelocateNode.h  ExecutionPlaceholderNode.cpp  ExecutionPlaceholderNode.h  ExecutionSaveFileNode.cpp  ExecutionSaveFileNode.h  ExecutionScriptNode.cpp  ExecutionScriptNode.h  ExecutionStringReplaceNode.cpp  ExecutionStringReplaceNode.h  (+7 more)
src/parsing/visual_nodes/: WidgetFunctionNode.h  WindowComponentFactory.cpp  WindowComponentFactory.h  WindowLayoutGridNode.h  WindowLayoutHorizontalNode.h  WindowLayoutNode.h  WindowLayoutVerticalNode.h  WindowNode.h  WindowWidgetActionNode.h  WindowWidgetCheckBoxNode.h  WindowWidgetComboboxNode.h  WindowWidgetComboitemNode.h  WindowWidgetFileDialogNode.h  WindowWidgetFileListNode.h  WindowWidgetFileSelectBoxNode.h  WindowWidgetGeneralGroupNode.h  WindowWidgetGroupBoxNode.h  WindowWidgetGroupNode.h  WindowWidgetImageNode.h  WindowWidgetInputNode.cpp  WindowWidgetInputNode.h  WindowWidgetLabelNode.h  WindowWidgetNode.h  WindowWidgetRadioButtonNode.h  WindowWidgetSliderNode.h  WindowWidgetSlideritemNode.h  WindowWidgetStreamBoxNode.h  WindowWidgetStreamNode.h  WindowWidgetWindowNode.h
templates/: 1_trimmomatic.gui  WSL_install.gui  bla.gui  blastn.gui  bowtie_docker.gui  bowtie_docker_mod.gui  circlator_docker.gui  example.gui  glimmer3.gui  graphmap.gui  hmmer.gui  hmmer_WSL.gui  jellyfish.gui  jellyfish_WSL.gui  netcat.gui  netcat_linux.gui  script_test.gui  syngrep.gui  test.gui  trimmomatic.gui  trimmomatic.guiblubb
webserver/: ajax_php_file.php  files.php  get_template.php  list_templates.php  styles.css  upload_template.php
webstuff/: gui.php  php_db_functions.php  script.js
